--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -120,7 +120,6 @@
 
                 <RatingBar
                     android:id="@+id/productRating_singleProduct"
-                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -181,6 +180,15 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:text="push notification "/>
+
+                <Button
+                    android:id="@+id/share_sheet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:text="share sheet "/>
 
 
                 <LinearLayout
